bin/testsuite/tests/compiler/src/errors/compiler5593.swg
#global testerror "Err0447"

#test
{
    a += b 3
}
